elastic-kibana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elastic
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts: []
      secretName: tls-star-kaeptn-dev
  rules:
    - host: kibana.kaeptn.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana-kibana
              port:
                number: 5601
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: elastic
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts: []
      secretName: tls-star-kaeptn-dev
  rules:
    - host: elastic.kaeptn.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: elasticsearch-master
              port:
                number: 9200
